Atualização translations/texts/items/armors/decorative/hats/clocktophat/clocktophat.head.json

--- a/translations/texts/items/armors/decorative/hats/clocktophat/clocktophat.head.json
+++ b/translations/texts/items/armors/decorative/hats/clocktophat/clocktophat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Clock Tophat"
+      "Eng": "Clock Tophat",
+      "Por": "Cartola de Relógio"
     }
   }
 ]
