--- a/translations/texts/items/armors/decorative/hats/dinosaur/dinosaur.head.json
+++ b/translations/texts/items/armors/decorative/hats/dinosaur/dinosaur.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dinosaur Hat"
+      "Eng": "Dinosaur Hat",
+      "Por": "Chapéu de Dinossauro"
     }
   }
 ]
