--- a/translations/texts/items/armors/decorative/hats/divingmask/divingmask.head.json
+++ b/translations/texts/items/armors/decorative/hats/divingmask/divingmask.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Diving Mask"
+      "Eng": "Diving Mask",
+      "Por": "Máscara de Mergulho"
     }
   }
 ]
