Atualização translations/texts/items/armors/decorative/hats/ethnicmask/ethnichead.head.json

--- a/translations/texts/items/armors/decorative/hats/ethnicmask/ethnichead.head.json
+++ b/translations/texts/items/armors/decorative/hats/ethnicmask/ethnichead.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tribal Mask"
+      "Eng": "Tribal Mask",
+      "Por": "Máscara Tribal"
     }
   }
 ]
