--- a/translations/texts/items/armors/decorative/hats/eye/eye.head.json
+++ b/translations/texts/items/armors/decorative/hats/eye/eye.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "All-Seeing Helmet"
+      "Eng": "All-Seeing Helmet",
+      "Por": "Capacete que Tudo Vê"
     }
   }
 ]
