--- a/translations/texts/items/armors/decorative/hats/eyehead/eyehead.head.json
+++ b/translations/texts/items/armors/decorative/hats/eyehead/eyehead.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Terrifying Eye Hat"
+      "Eng": "Terrifying Eye Hat",
+      "Por": "Chapéu de Olho Aterrorizante"
     }
   }
 ]
