Atualização translations/texts/items/armors/decorative/hats/eyepatch/eyepatch.head.json

--- a/translations/texts/items/armors/decorative/hats/eyepatch/eyepatch.head.json
+++ b/translations/texts/items/armors/decorative/hats/eyepatch/eyepatch.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dastardly Eyepatch"
+      "Eng": "Dastardly Eyepatch",
+      "Por": "Tapa-olho de Covarde"
     }
   }
 ]
