Atualização translations/texts/items/armors/decorative/hats/fancy/fancy.head.json

--- a/translations/texts/items/armors/decorative/hats/fancy/fancy.head.json
+++ b/translations/texts/items/armors/decorative/hats/fancy/fancy.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dapper Hat"
+      "Eng": "Dapper Hat",
+      "Por": "Chapéu Estiloso"
     }
   }
 ]
