--- a/translations/texts/items/armors/decorative/hats/feather/feather.head.json
+++ b/translations/texts/items/armors/decorative/hats/feather/feather.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Feather Headband"
+      "Eng": "Feather Headband",
+      "Por": "Faixa de Penas"
     }
   }
 ]
