--- a/translations/texts/items/armors/decorative/hats/floppyhat/floppyhat.head.json
+++ b/translations/texts/items/armors/decorative/hats/floppyhat/floppyhat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Floppy Fancy Hat"
+      "Eng": "Floppy Fancy Hat",
+      "Por": "Chapéu Extravagante Flexível"
     }
   }
 ]
