Atualização translations/texts/items/armors/decorative/hats/fullbunny/fullbunny.head.json

--- a/translations/texts/items/armors/decorative/hats/fullbunny/fullbunny.head.json
+++ b/translations/texts/items/armors/decorative/hats/fullbunny/fullbunny.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bunny Mask"
+      "Eng": "Bunny Mask",
+      "Por": "Máscara de Coelho"
     }
   }
 ]
