--- a/translations/texts/items/armors/decorative/hats/georgedev/georgedev.head.json
+++ b/translations/texts/items/armors/decorative/hats/georgedev/georgedev.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "George's Foxy Glasses"
+      "Eng": "George's Foxy Glasses",
+      "Por": "Óculos de George"
     }
   }
 ]
