Atualização translations/texts/items/armors/decorative/hats/gladiator/gladiator.head.json

--- a/translations/texts/items/armors/decorative/hats/gladiator/gladiator.head.json
+++ b/translations/texts/items/armors/decorative/hats/gladiator/gladiator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Gladiator Helmet"
+      "Eng": "Gladiator Helmet",
+      "Por": "Capacete de Gladiador"
     }
   }
 ]
