Atualização translations/texts/items/armors/decorative/hats/glasses1/glasses1.head.json

--- a/translations/texts/items/armors/decorative/hats/glasses1/glasses1.head.json
+++ b/translations/texts/items/armors/decorative/hats/glasses1/glasses1.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cateye Glasses"
+      "Eng": "Cateye Glasses",
+      "Por": "Óculos Olho de Gato"
     }
   }
 ]
