--- a/translations/texts/items/armors/decorative/hats/glasses3eyes/glasses3eyes.head.json
+++ b/translations/texts/items/armors/decorative/hats/glasses3eyes/glasses3eyes.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Three-Eyed Glasses"
+      "Eng": "Three-Eyed Glasses",
+      "Por": "Óculos de Três Olhos"
     }
   }
 ]
