--- a/translations/texts/items/armors/decorative/hats/glasses4/glasses4.head.json
+++ b/translations/texts/items/armors/decorative/hats/glasses4/glasses4.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Huge Glasses"
+      "Eng": "Huge Glasses",
+      "Por": "Óculos Enormes"
     }
   }
 ]
