Atualização translations/texts/items/armors/decorative/hats/glasses5/glasses5.head.json

--- a/translations/texts/items/armors/decorative/hats/glasses5/glasses5.head.json
+++ b/translations/texts/items/armors/decorative/hats/glasses5/glasses5.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Simple Glasses"
+      "Eng": "Simple Glasses",
+      "Por": "Óculos Simples"
     }
   }
 ]
