Atualização translations/texts/items/armors/decorative/hats/goat/goat.head.json

--- a/translations/texts/items/armors/decorative/hats/goat/goat.head.json
+++ b/translations/texts/items/armors/decorative/hats/goat/goat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Goat Skull Mask"
+      "Eng": "Goat Skull Mask",
+      "Por": "Máscara de Crânio de Cabra"
     }
   }
 ]
