Atualização translations/texts/items/armors/decorative/hats/greenfinger/greenfinger.head.json

--- a/translations/texts/items/armors/decorative/hats/greenfinger/greenfinger.head.json
+++ b/translations/texts/items/armors/decorative/hats/greenfinger/greenfinger.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Greenfinger's Headdress"
+      "Eng": "Greenfinger's Headdress",
+      "Por": "Cocar do Greenfinger"
     }
   }
 ]
