--- a/translations/texts/items/armors/decorative/hats/groucho/groucho.head.json
+++ b/translations/texts/items/armors/decorative/hats/groucho/groucho.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Groucho Glasses"
+      "Eng": "Groucho Glasses",
+      "Por": "Óculos de Groucho"
     }
   }
 ]
