Atualização translations/texts/items/armors/decorative/hats/hawaiian/hawaiian.head.json

--- a/translations/texts/items/armors/decorative/hats/hawaiian/hawaiian.head.json
+++ b/translations/texts/items/armors/decorative/hats/hawaiian/hawaiian.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hawaiian Flower Crown"
+      "Eng": "Hawaiian Flower Crown",
+      "Por": "Coroa de Flores Havaiana"
     }
   }
 ]
