Atualização translations/texts/items/armors/decorative/hats/hobo/hobo.head.json

--- a/translations/texts/items/armors/decorative/hats/hobo/hobo.head.json
+++ b/translations/texts/items/armors/decorative/hats/hobo/hobo.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cardboard Hobo Hat"
+      "Eng": "Cardboard Hobo Hat",
+      "Por": "Chapéu de Papelão"
     }
   }
 ]
