--- a/translations/texts/items/armors/decorative/hats/horse/horse.head.json
+++ b/translations/texts/items/armors/decorative/hats/horse/horse.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Horse Head"
+      "Eng": "Horse Head",
+      "Por": "Cabeça de Cavalo"
     }
   }
 ]
