--- a/translations/texts/items/armors/decorative/hats/insidious/insidious.head.json
+++ b/translations/texts/items/armors/decorative/hats/insidious/insidious.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Insidious Mask"
+      "Eng": "Insidious Mask",
+      "Por": "Máscara de Insidioso"
     }
   }
 ]
