--- a/translations/texts/items/armors/decorative/hats/ironavianhelmet/ironavianhelmet.head.json
+++ b/translations/texts/items/armors/decorative/hats/ironavianhelmet/ironavianhelmet.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "The Aerohelm"
+      "Eng": "The Aerohelm",
+      "Por": "O Aeroelmo"
     }
   }
 ]
