--- a/translations/texts/items/armors/decorative/hats/jester/jester.head.json
+++ b/translations/texts/items/armors/decorative/hats/jester/jester.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Jester's Hat"
+      "Eng": "Jester's Hat",
+      "Por": "Chapéu de Bobo da Corte"
     }
   }
 ]
