--- a/translations/texts/items/armors/decorative/hats/kathood/kathood.head.json
+++ b/translations/texts/items/armors/decorative/hats/kathood/kathood.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hood With Ears"
+      "Eng": "Hood With Ears",
+      "Por": "Capuz com Orelhas"
     }
   }
 ]
