Atualização translations/texts/items/armors/decorative/hats/kitty/kitty.head.json

--- a/translations/texts/items/armors/decorative/hats/kitty/kitty.head.json
+++ b/translations/texts/items/armors/decorative/hats/kitty/kitty.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Kitty Hat"
+      "Eng": "Kitty Hat",
+      "Por": "Chapéu de Gatinho"
     }
   }
 ]
