--- a/translations/texts/items/armors/decorative/hats/knight/knight.head.json
+++ b/translations/texts/items/armors/decorative/hats/knight/knight.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Knight Helmet"
+      "Eng": "Knight Helmet",
+      "Por": "Capacete de Cavaleiro"
     }
   }
 ]
