--- a/translations/texts/items/armors/decorative/hats/luchador/luchador.head.json
+++ b/translations/texts/items/armors/decorative/hats/luchador/luchador.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Luchador Mask"
+      "Eng": "Luchador Mask",
+      "Por": "Máscara de Luchador"
     }
   }
 ]
