Atualização translations/texts/items/armors/decorative/hats/m1helmetmedic/m1helmet.head.json

--- a/translations/texts/items/armors/decorative/hats/m1helmetmedic/m1helmet.head.json
+++ b/translations/texts/items/armors/decorative/hats/m1helmetmedic/m1helmet.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "M1 Medic Helmet"
+      "Eng": "M1 Medic Helmet",
+      "Por": "Capacete Médico M1"
     }
   }
 ]
