--- a/translations/texts/items/armors/decorative/hats/mechpilot/mechpilot.head.json
+++ b/translations/texts/items/armors/decorative/hats/mechpilot/mechpilot.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mech Pilot Helmet"
+      "Eng": "Mech Pilot Helmet",
+      "Por": "Capacete de Piloto de Mecha"
     }
   }
 ]
