--- a/translations/texts/items/armors/decorative/hats/mininghat/mininghat.head.json
+++ b/translations/texts/items/armors/decorative/hats/mininghat/mininghat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mining Helmet"
+      "Eng": "Mining Helmet",
+      "Por": "Capacete de Mineração"
     }
   }
 ]
