--- a/translations/texts/items/armors/decorative/hats/pharaoh/pharaoh.head.json
+++ b/translations/texts/items/armors/decorative/hats/pharaoh/pharaoh.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pharaoh Headdress"
+      "Eng": "Pharaoh Headdress",
+      "Por": "Cocar de Faraó"
     }
   }
 ]
