--- a/translations/texts/items/armors/decorative/hats/phrygiancap/phrygiancap.head.json
+++ b/translations/texts/items/armors/decorative/hats/phrygiancap/phrygiancap.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Phrygian Cap"
+      "Eng": "Phrygian Cap",
+      "Por": "Boné Frígio"
     }
   }
 ]
