--- a/translations/texts/items/armors/decorative/hats/plaguedoctor/plaguedoctor.head.json
+++ b/translations/texts/items/armors/decorative/hats/plaguedoctor/plaguedoctor.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Plague Doctor Mask"
+      "Eng": "Plague Doctor Mask",
+      "Por": "Máscara de Doutor da Praga"
     }
   }
 ]
