Atualização translations/texts/items/armors/decorative/hats/pyramid/pyramid.head.json

--- a/translations/texts/items/armors/decorative/hats/pyramid/pyramid.head.json
+++ b/translations/texts/items/armors/decorative/hats/pyramid/pyramid.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pyramid Head"
+      "Eng": "Pyramid Head",
+      "Por": "Cabeça de Pirâmide"
     }
   }
 ]
