--- a/translations/texts/items/armors/decorative/hats/rainbowhood/rainbowhood.head.json
+++ b/translations/texts/items/armors/decorative/hats/rainbowhood/rainbowhood.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rainbow Hood"
+      "Eng": "Rainbow Hood",
+      "Por": "Capa Arco-íris"
     }
   }
 ]
