--- a/translations/texts/items/armors/decorative/hats/safetyhelmet/safetyhelmet.head.json
+++ b/translations/texts/items/armors/decorative/hats/safetyhelmet/safetyhelmet.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Safety Helmet"
+      "Eng": "Safety Helmet",
+      "Por": "Capacete de Proteção"
     }
   }
 ]
