Atualização translations/texts/items/armors/decorative/hats/shared_shroomhead/shroom.head.json

--- a/translations/texts/items/armors/decorative/hats/shared_shroomhead/shroom.head.json
+++ b/translations/texts/items/armors/decorative/hats/shared_shroomhead/shroom.head.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Agaran Gilled Hat"
+      "Eng": "Agaran Gilled Hat",
+      "Por": "Chapéu de Agaran"
     }
   }
 ]
