--- a/translations/texts/items/armors/decorative/hats/shark/shark.head.json
+++ b/translations/texts/items/armors/decorative/hats/shark/shark.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shark Hat"
+      "Eng": "Shark Hat",
+      "Por": "Chapéu de Tubarão"
     }
   }
 ]
