--- a/translations/texts/items/armors/decorative/hats/sheep/sheep.head.json
+++ b/translations/texts/items/armors/decorative/hats/sheep/sheep.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sheep Hat"
+      "Eng": "Sheep Hat",
+      "Por": "Chapéu de Ovelha"
     }
   }
 ]
