--- a/translations/texts/items/armors/decorative/hats/shroomdisguise/shroomdisguise.head.json
+++ b/translations/texts/items/armors/decorative/hats/shroomdisguise/shroomdisguise.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shroom Disguise Mask"
+      "Eng": "Shroom Disguise Mask",
+      "Por": "Máscara de Disfarce de Cogumelo"
     }
   }
 ]
