--- a/translations/texts/items/armors/decorative/hats/shroomhead/shroom.head.json
+++ b/translations/texts/items/armors/decorative/hats/shroomhead/shroom.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Agaran Waxcap Hat"
+      "Eng": "Agaran Waxcap Hat",
+      "Por": "Chapéu de Cera Agaran"
     }
   }
 ]
