--- a/translations/texts/items/armors/decorative/hats/shroomhead3/shroom.head.json
+++ b/translations/texts/items/armors/decorative/hats/shroomhead3/shroom.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Agaran Agaric Hat"
+      "Eng": "Agaran Agaric Hat",
+      "Por": "Chapéu de Agaran Agaric"
     }
   }
 ]
