Atualização translations/texts/items/armors/decorative/hats/skullmask/skullmask.head.json

--- a/translations/texts/items/armors/decorative/hats/skullmask/skullmask.head.json
+++ b/translations/texts/items/armors/decorative/hats/skullmask/skullmask.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Skull Mask"
+      "Eng": "Skull Mask",
+      "Por": "Máscara de Crânio"
     }
   }
 ]
