--- a/translations/texts/items/armors/decorative/hats/spacebird/spacebird.head.json
+++ b/translations/texts/items/armors/decorative/hats/spacebird/spacebird.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spacebird Helmet"
+      "Eng": "Spacebird Helmet",
+      "Por": "Capacete de Pássaro Espacial"
     }
   }
 ]
