--- a/translations/texts/items/armors/decorative/hats/strawberry/strawberry.head.json
+++ b/translations/texts/items/armors/decorative/hats/strawberry/strawberry.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Strawberry Mask"
+      "Eng": "Strawberry Mask",
+      "Por": "Máscara de Morango"
     }
   }
 ]
