--- a/translations/texts/items/armors/decorative/hats/sunglasses1/sunglasses1.head.json
+++ b/translations/texts/items/armors/decorative/hats/sunglasses1/sunglasses1.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sunglasses"
+      "Eng": "Sunglasses",
+      "Por": "Oculos Escuros"
     }
   }
 ]
