--- a/translations/texts/items/armors/decorative/hats/swamphat/swamphat.head.json
+++ b/translations/texts/items/armors/decorative/hats/swamphat/swamphat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Swamp Hat"
+      "Eng": "Swamp Hat",
+      "Por": "Chapéu do Pântano"
     }
   }
 ]
