--- a/translations/texts/items/armors/decorative/hats/teddy/teddy.head.json
+++ b/translations/texts/items/armors/decorative/hats/teddy/teddy.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Teddy Hat"
+      "Eng": "Teddy Hat",
+      "Por": "Chapéu de Urso de Pelúcia"
     }
   }
 ]
