--- a/translations/texts/items/armors/decorative/hats/toptophat/toptophathead.head.json
+++ b/translations/texts/items/armors/decorative/hats/toptophat/toptophathead.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Top Top Hat"
+      "Eng": "Top Top Hat",
+      "Por": "Cartola Longa"
     }
   }
 ]
