--- a/translations/texts/items/armors/decorative/hats/tvhelmet/tvhelmet.head.json
+++ b/translations/texts/items/armors/decorative/hats/tvhelmet/tvhelmet.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "T.V. Helmet"
+      "Eng": "T.V. Helmet",
+      "Por": "Capacete de T.V."
     }
   }
 ]
