Atualização translations/texts/items/armors/decorative/hats/unicorn/unicorn.head.json

--- a/translations/texts/items/armors/decorative/hats/unicorn/unicorn.head.json
+++ b/translations/texts/items/armors/decorative/hats/unicorn/unicorn.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Unicorn Head"
+      "Eng": "Unicorn Head",
+      "Por": "Cabeça de Unicórnio"
     }
   }
 ]
