--- a/translations/texts/items/armors/decorative/hats/venetianmask/ventetianmask.head.json
+++ b/translations/texts/items/armors/decorative/hats/venetianmask/ventetianmask.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Venetian Mask"
+      "Eng": "Venetian Mask",
+      "Por": "Máscara Veneziana"
     }
   }
 ]
