--- a/translations/texts/items/armors/decorative/hats/vicious/vicious.head.json
+++ b/translations/texts/items/armors/decorative/hats/vicious/vicious.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Vicious Mask"
+      "Eng": "Vicious Mask",
+      "Por": "Máscara Viciosa"
     }
   }
 ]
