Atualização translations/texts/items/armors/decorative/hats/wig/wig.head.json

--- a/translations/texts/items/armors/decorative/hats/wig/wig.head.json
+++ b/translations/texts/items/armors/decorative/hats/wig/wig.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Very Subtle Wig"
+      "Eng": "Very Subtle Wig",
+      "Por": "Peruca Muito Sutil"
     }
   }
 ]
